Fixed the bug that was making the document too wide for the viewport (making an ugly horizontal scrollbar). Simply remove the border on the header and footer.

--- a/templates/style.scss
+++ b/templates/style.scss
@@ -35,6 +35,9 @@ body {
 */
 
 /* jQuery Mobile Global Styles */
+header.ui-header, footer.ui-footer {
+	border: 0px none;
+}
 .ui-content {
 	padding: 0px;
 }
